update on basic

--- a/Python/StartML/basic.ipynb
+++ b/Python/StartML/basic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "bf6b0819",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "455ecbbc",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "4      70     160"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "85c60f51",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "4bedc73b",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "Height  0.939461  1.000000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "4fc296df",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "c110265f",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "7932b276",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "[100 rows x 1 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "094fadf6",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "Name: Height, Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "105166d7",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "db6122cb",
    "metadata": {},
    "outputs": [],
@@ -385,18 +385,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "89c202f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Standardization\n"
+    "## Standardization\n",
+    "from sklearn.preprocessing import StandardScaler\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f4018d3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.11940144],\n",
+       "       [ 1.08292568],\n",
+       "       [-1.75096916],\n",
+       "       [ 0.11940144],\n",
+       "       [ 1.08292568],\n",
+       "       [ 1.08292568],\n",
+       "       [ 0.11940144],\n",
+       "       [ 0.11940144],\n",
+       "       [ 1.64970465],\n",
+       "       [ 1.36631516],\n",
+       "       [ 0.11940144],\n",
+       "       [-1.58093547],\n",
+       "       [-1.0141565 ],\n",
+       "       [-0.90080071],\n",
+       "       [-1.75096916],\n",
+       "       [-1.0141565 ],\n",
+       "       [-1.58093547],\n",
+       "       [ 0.7995362 ],\n",
+       "       [ 0.11940144],\n",
+       "       [ 1.08292568],\n",
+       "       [-0.90080071],\n",
+       "       [-1.0141565 ],\n",
+       "       [ 0.11940144],\n",
+       "       [ 0.51614671],\n",
+       "       [ 1.36631516],\n",
+       "       [ 1.08292568],\n",
+       "       [-0.90080071],\n",
+       "       [-1.0141565 ],\n",
+       "       [ 0.23275723],\n",
+       "       [ 1.08292568],\n",
+       "       [ 0.51614671],\n",
+       "       [ 0.23275723],\n",
+       "       [-1.75096916],\n",
+       "       [-0.33402174],\n",
+       "       [ 0.11940144],\n",
+       "       [ 1.08292568],\n",
+       "       [-0.90080071],\n",
+       "       [ 0.23275723],\n",
+       "       [ 1.08292568],\n",
+       "       [-1.58093547],\n",
+       "       [-0.90080071],\n",
+       "       [ 0.51614671],\n",
+       "       [-0.33402174],\n",
+       "       [ 1.36631516],\n",
+       "       [-1.0141565 ],\n",
+       "       [ 0.11940144],\n",
+       "       [ 0.11940144],\n",
+       "       [ 0.34611302],\n",
+       "       [-1.75096916],\n",
+       "       [-1.58093547],\n",
+       "       [ 0.11940144],\n",
+       "       [ 1.08292568],\n",
+       "       [-1.75096916],\n",
+       "       [ 0.51614671],\n",
+       "       [ 1.08292568],\n",
+       "       [ 0.11940144],\n",
+       "       [-0.33402174],\n",
+       "       [ 0.11940144],\n",
+       "       [ 1.36631516],\n",
+       "       [-1.0141565 ],\n",
+       "       [-0.33402174],\n",
+       "       [ 0.11940144],\n",
+       "       [-1.58093547],\n",
+       "       [ 0.7995362 ],\n",
+       "       [ 0.7995362 ],\n",
+       "       [ 1.08292568],\n",
+       "       [ 0.34611302],\n",
+       "       [ 0.23275723],\n",
+       "       [-1.58093547],\n",
+       "       [-0.33402174],\n",
+       "       [ 1.64970465],\n",
+       "       [ 0.7995362 ],\n",
+       "       [ 0.51614671],\n",
+       "       [ 1.64970465],\n",
+       "       [-0.90080071]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler=StandardScaler()\n",
+    "scaler.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1cb48dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test=scaler.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7af7223a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.90080071],\n",
+       "       [ 0.11940144],\n",
+       "       [ 0.23275723],\n",
+       "       [ 1.36631516],\n",
+       "       [ 1.64970465],\n",
+       "       [ 0.7995362 ],\n",
+       "       [ 0.23275723],\n",
+       "       [-1.75096916],\n",
+       "       [ 0.34611302],\n",
+       "       [-1.75096916],\n",
+       "       [-1.58093547],\n",
+       "       [ 0.51614671],\n",
+       "       [ 0.11940144],\n",
+       "       [-1.0141565 ],\n",
+       "       [ 0.34611302],\n",
+       "       [-0.33402174],\n",
+       "       [ 1.64970465],\n",
+       "       [ 1.36631516],\n",
+       "       [ 1.64970465],\n",
+       "       [ 0.11940144],\n",
+       "       [ 0.7995362 ],\n",
+       "       [ 1.08292568],\n",
+       "       [ 0.34611302],\n",
+       "       [ 0.34611302],\n",
+       "       [ 0.11940144]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "05a808d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Applying Linear Regression\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "261799c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regression="
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
