--- a/Python/StartML/basic.ipynb
+++ b/Python/StartML/basic.ipynb
@@ -1089,6 +1089,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a581d57",
+   "metadata": {},
+   "source": [
+    "### PREDICTION of TEST DATA1\n",
+    "1. predicted height uotput = intercept +coef(weights)\n",
+    "2. y_pred_test=74.09 + 1.13(X_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "0cf17e38",
@@ -1114,7 +1124,9 @@
    "id": "1fcb5b34",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Performence  Metrices"
+   ]
   }
  ],
  "metadata": {
