--- a/Python/StartML/basic.ipynb
+++ b/Python/StartML/basic.ipynb
@@ -1093,7 +1093,7 @@
    "id": "9a581d57",
    "metadata": {},
    "source": [
-    "### PREDICTION of TEST DATA1\n",
+    "## PREDICTION of TEST DATA1\n",
     "1. predicted height uotput = intercept +coef(weights)\n",
     "2. y_pred_test=74.09 + 1.13(X_test)"
    ]
