--- a/Python/StartML/basic.ipynb
+++ b/Python/StartML/basic.ipynb
@@ -1202,11 +1202,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "c6e757b7",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-22.53970864281185"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#display adjusted R-squared\n",
+    "1 - (1-score)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9befe5c2",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## OLS TECHNIQUE\n",
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "dea70880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = sm.OLS(y_train,X_train).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2f98fff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.85620948  0.24604119  0.4796246   2.81545868  3.3994172   1.64754164\n",
+      "  0.4796246  -3.60808504  0.71320801 -3.60808504 -3.25770993  1.06358312\n",
+      "  0.24604119 -2.08979289  0.71320801 -0.68829244  3.3994172   2.81545868\n",
+      "  3.3994172   0.24604119  1.64754164  2.23150016  0.71320801  0.71320801\n",
+      "  0.24604119]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = model.predict(X_test)\n",
+    "print(prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "38257e88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                 OLS Regression Results                                \n",
+      "=======================================================================================\n",
+      "Dep. Variable:                 Height   R-squared (uncentered):                   0.988\n",
+      "Model:                            OLS   Adj. R-squared (uncentered):              0.987\n",
+      "Method:                 Least Squares   F-statistic:                              5863.\n",
+      "Date:                Sun, 15 Jun 2025   Prob (F-statistic):                    3.23e-72\n",
+      "Time:                        13:08:34   Log-Likelihood:                         -323.36\n",
+      "No. Observations:                  75   AIC:                                      648.7\n",
+      "Df Residuals:                      74   BIC:                                      651.0\n",
+      "Df Model:                           1                                                  \n",
+      "Covariance Type:            nonrobust                                                  \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Weight         2.0606      0.027     76.567      0.000       2.007       2.114\n",
+      "==============================================================================\n",
+      "Omnibus:                        5.080   Durbin-Watson:                   1.789\n",
+      "Prob(Omnibus):                  0.079   Jarque-Bera (JB):                5.117\n",
+      "Skew:                          -0.616   Prob(JB):                       0.0774\n",
+      "Kurtosis:                       2.655   Cond. No.                         1.00\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
+      "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baacf7b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Prediction for new data"
+   ]
   }
  ],
  "metadata": {
